src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DP&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining and Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <inlineHelpText>Date letter was signed by client</inlineHelpText>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Use__c</fullName>
        <label>Energy Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LEED_Level__c</fullName>
        <label>LEED Level</label>
        <picklist>
            <picklistValues>
                <fullName>LEED Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum Certificate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Sectors__c</fullName>
        <label>Market Sectors</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Profile</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Certificates_of_Completion</fullName>
        <active>true</active>
        <label>Certificates of Completion</label>
    </recordTypes>
    <recordTypes>
        <fullName>LEED_Scorecard</fullName>
        <active>true</active>
        <label>LEED Scorecard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Pr_cis</fullName>
        <active>true</active>
        <label>Project Sheet</label>
    </recordTypes>
</CustomObject>